--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "csp_tracker"]
 	path = csp_tracker
-	url = https://github.com/mistupv/csp_tracker.git
+	url = https://github.com/tamarit/csp_tracker.git
